# jcode-plans-py

./: .gitignore  README.md  justfile  pyproject.toml
.githooks/: pre-commit
design/: 01-core-concepts.md  02-core-arch.md  03-api-and-usage.md  04-feature-planstore-abstraction.md  05-feature-filesystem-persistence.md  06-feature-file-naming-convention.md  07-feature-default-template.md  08-feature-directory-initialization.md  09-feature-immutable-dataclass.md  10-feature-time-based-sorting.md  11-feature-project-filtering.md  12-feature-path-resolution.md  13-feature-project-name-sanitization.md  audit.md  clean.sh  demo.template  how-to.md  init.md  refine_feature.md  seed_docs.md
src/jcode_plans/: __init__.py  store.py
src/jcode_plans/tests/: test_store.py
